--- a/web/package.json
+++ b/web/package.json
@@ -20,12 +20,13 @@
     "formidable": "^2.1.1",
     "leaflet": "^1.9.3",
     "multer": "^1.4.5-lts.1",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
     "sass": "^1.58.3",
+    "sharp": "^0.31.3",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
