--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
@@ -27,6 +30,7 @@
     "react-leaflet": "^4.2.0",
     "sass": "^1.58.3",
     "sharp": "^0.31.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
